xmonad/logs/xmonad-recomp_2023_07_12-23%.M00-79.log
[*] Recompiling XMonad & updating binary at /usr/local/bin/xmonad...
XMonad will use stack ghc --stack-yaml "/home/pls/.config/xmonad/stack.yaml" to recompile.
XMonad recompiling (forced).
Errors detected while compiling xmonad config: /home/pls/.config/xmonad/xmonad.hs
$ stack build --silent --stack-yaml /home/pls/.config/xmonad/stack.yaml
/home/pls/.stack/hooks/ghc-install.sh: line 12: ghcup: command not found
/home/pls/.stack/hooks/ghc-install.sh: line 12: ghcup: command not found
Installing 9.4.8 via ghcup failed exit 3
$ stack ghc --stack-yaml /home/pls/.config/xmonad/stack.yaml -- --make xmonad.hs -i -ilib -fforce-recomp -main-is main -v0 -outputdir /home/pls/.cache/xmonad/build-x86_64-linux -o /home/pls/.cache/xmonad/xmonad-x86_64-linux
/home/pls/.stack/hooks/ghc-install.sh: line 12: ghcup: command not found
/home/pls/.stack/hooks/ghc-install.sh: line 12: ghcup: command not found
Installing 9.4.8 via ghcup failed exit 3

Warning: Path to GHC binary is not a valid path: .

xmonad.hs:150:8: error:
    • Couldn't match expected type: IO ()
                  with actual type: a0 -> IO ()
    • Probable cause: ‘(.)’ is applied to too few arguments
      In the expression:
        xmonad
          . ewmh
              . ewmhFullscreen . dynamicSBs myStatusBarSpawner . docks . defaults
      In an equation for ‘main’:
          main
            = xmonad
                . ewmh
                    . ewmhFullscreen . dynamicSBs myStatusBarSpawner . docks . defaults
    |
150 | main = xmonad . ewmh . ewmhFullscreen . dynamicSBs myStatusBarSpawner . docks . defaults
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:150:81: error:
    • Couldn't match expected type: a0 -> XConfig l0
                  with actual type: XConfig
                                      (XMonad.Layout.LayoutModifier.ModifiedLayout
                                         XMonad.Layout.Gaps.Gaps
                                         (XMonad.Layout.LayoutModifier.ModifiedLayout
                                            XMonad.Layout.Spacing.Spacing
                                            (Choose Tall (Choose ThreeCol Full))))
    • In the second argument of ‘(.)’, namely ‘defaults’
      In the second argument of ‘(.)’, namely ‘docks . defaults’
      In the second argument of ‘(.)’, namely
        ‘dynamicSBs myStatusBarSpawner . docks . defaults’
    |
150 | main = xmonad . ewmh . ewmhFullscreen . dynamicSBs myStatusBarSpawner . docks . defaults
    |                                                                                 ^^^^^^^^

xmonad.hs:162:35: error:
    Variable not in scope: myManagehook :: t0 -> ManageHook
    Suggested fix:
      Perhaps use one of these:
        ‘myManageHook’ (line 105), ‘manageHook’ (imported from XMonad)
    |
162 |     , manageHook = manageSpawn <> myManagehook def
    |                                   ^^^^^^^^^^^^

Please check the file for errors.

xmonad: xmessage: executeFile: does not exist (No such file or directory)
[*] Recompile job exited with status 0:
